--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,19 +27,16 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
-  cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
   flutter_simple_treeview: ^3.0.0-nullsafety.1
   jseen:
     path: ../packages/jseen
+  android_battery_optimization:
+    git:
+      url: https://github.com/jinyus/flutter_android_battery_optimization.git
 
 dev_dependencies:
-  # The "flutter_lints" package below contains a set of recommended lints to
-  # encourage good coding practices. The lint set provided by the package is
-  # activated in the `analysis_options.yaml` file located at the root of your
-  # package. See that file for information about deactivating specific lint
-  # rules and activating additional ones.
   flutter_lints: ^1.0.0
   flutter_test:
     sdk: flutter
